[+] new format for conversation body + displaying new message in the current conv. got rid of a flickering bug

--- a/srcs/front_react/src/components/chat/chat.style.scss
+++ b/srcs/front_react/src/components/chat/chat.style.scss
@@ -9,14 +9,13 @@ $width_chat: calc(450 * var(--res));
     border-style: dashed;
     width: $height_chat;
     height: $width_chat;
-    padding: 1%;
 }
 
 .chat__list {
     display: flex;
     flex-direction: column;
-    flex-basis: 25%;
-    padding-right: 1%;
+    flex : 0 0 22%;
+    padding: 1%;
     border-right-style: dashed;
 }
 
@@ -79,31 +78,29 @@ $width_chat: calc(450 * var(--res));
 
 .conversation {
     display: flex;
-    flex-direction: row-reverse;
-    flex-basis: 75%;
-    padding-left: 1%;
+    width: 100%;
 }
 
 .conversation__content {
     display: flex;
     flex-direction: column;
-    padding-left: 3%;
-    width: 100%;
-    height: 100%;
+    flex: 0 0 70%;
+    padding: 1%;
+}
+
+.conversation__options {
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 25%;
     border-left-style: dashed;
-    min-width: calc(200 * var(--res));
-    max-width: calc(200 * var(--res));
+    padding: 1%;
 }
 
-.conversation__target {
+.conversation__options__title {
     display: flex;
-    flex-direction: column;
-}
-
-.conversation__target__profile {
-    display: flex;
-    flex-direction: column;
-    
+    flex-wrap: wrap;
+    flex: 0 0 25%;
+    border-bottom-style: dashed;
 }
 
 
